--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
           </li>
         </ul>
       </div>
-      <div data-aos="fade-up" data-aos-duration="3000" class="download-btn">
+      <div data-aos="fade-up" data-aos-duration="3000" class="download-btn"><br>
+      
         <a href="docs/AlphyJose_Resume.pdf" download="AlphyJose_Resume.pdf" onclick="alert('Resume Downloaded.')">
-          <i class="fa-solid fa-download"></i>
+          Resume <i class="fa-solid fa-download"></i>
         </a>
+        
       </div>
     </div>
   </section>
