Icons added for education section.

--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
         <div class="col-6" id="edu-left">
           <div class="edu-1" data-aos="fade-up" data-aos-duration="1000">
             <h4>2019</h4>
-            <h4>High School Education</h4>
+            <h4><i style="color: blueviolet;" class="fa-solid fa-school"></i> High School Education</h4>
             <h6>Holy Cross Higher Secondary School</h6>
             <h6>Score: 97%</h6>
           </div>
           <div class="edu-3" data-aos="fade-up" data-aos-duration="1000">
             <h4>2025</h4>
-            <h4>College Education</h4>
+            <h4><i style="color: blueviolet;" class="fa-solid fa-graduation-cap"></i> College Education</h4>
             <h6>Christ (Deemed To Be University),Kengeri Campus</h6>
             <h6>CGPA: 7.65/10</h6>
           </div>
@@ -135,7 +135,7 @@
         <div class="col-6" id="edu-right">
           <div class="edu-2" data-aos="fade-up" data-aos-duration="1000">
             <h4>2021</h4>
-            <h4>Higher Secondary Education</h4>
+            <h4><i style="color: blueviolet;" class="fa-solid fa-school"></i> Higher Secondary Education</h4>
           <h6>Holy Cross Higher Secondary School</h6>
           <h6>Score: 92%</h6>
           </div>
