--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
   <footer>
     <hr>
     <div class="container">
-      <div class="row sty-gri" style="color: #fefefe;">
+      <div class="row sty-gri" style="color: blueviolet;">
         <div class="rights col-6 col-lg-3">
           <h5 class="mt-2">
             Phone Me
@@ -343,12 +343,12 @@
           <ul>
             <a href="https://www.linkedin.com/in/alphyjose777/">
               <li>
-                <i class="fa-brands fa-linkedin"></i>
+                <i style="color: blueviolet;"  class="fa-brands fa-linkedin"></i>
               </li>
             </a>
-            <a href="https://www.instagram.com/jos.alphy/">
+            <a  href="https://www.instagram.com/jos.alphy/">
               <li>
-                <i class="fa-brands fa-square-instagram"></i>
+                <i style="color: blueviolet;" class="fa-brands fa-square-instagram"></i>
               </li>
             </a>
           </ul>
