Project Section Added

--- a/index.html
+++ b/index.html
@@ -196,12 +196,85 @@
               <span style="color: blueviolet;"><i class="fa-solid fa-person"></i></span> Adaptability
             </ul>
           </ul>
-          <br><br>
+          <br>
         </div>
       </div>
     </div>
-  </section><br>
+  </section>
   <!-- skills ends here -->
+
+  <!--projects starts here-->
+  <section id="projects">
+    <div class="container-proj">
+      <h1 data-aos="fade-up" data-aos-duration="1000">
+        Projects
+      </h1>
+      <br><br>
+      <div class="cards-container">
+        <div data-aos="fade-up-right" class="proj-cards">
+          <div class="img-card"></div>
+          <div class="proj-details">
+            <h5><a href="https://alphy777.github.io/Alphy777/" target="_blank" rel="noopener noreferrer">Personal Portfolio <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
+            <p style="font-size: .89rem!important;">
+              A fully responsive portfolio website built to showcase my projects, skills, and experience. 
+              Designed with clean UI and accessible navigation to create a strong first impression.
+            </p>
+            <p>
+              Technologies: HTML5, CSS, JavaScript, Bootstrap, Canva, GitHub
+            </p>
+          </div>
+        </div>
+        <div data-aos="fade-up" class="proj-cards">
+          <div class="img-card"></div>
+          <div class="proj-details">
+            <h5><a href="https://indbritzconsultancy.com.au/" target="_blank" rel="noopener noreferrer">Freelance Work <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
+            <p style="font-size: .89rem!important;">
+              Created a responsive static website for Indbritz Consultancy Integrated interactive 
+              tabs, reCAPTCHA validation. Also redesigned the company 
+              logo as per client requirements.
+            </p>
+            <p>
+              Technologies: HTML5, CSS, JavaScript, Bootstrap, Firebase, Canva
+            </p>
+          </div>
+        </div>
+        <div data-aos="fade-up" class="proj-cards">
+          <div class="img-card"></div>
+          <div class="proj-details">
+            <h5><a href="https://christnet-acc.web.app/" target="_blank" rel="noopener noreferrer">Christnet <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
+            <p style="font-size: .86em!important;">
+              Designed and developed a clean responsive website for Association of Christian Christites (ACC) as part of a service-learning project. 
+              The site highlights the mission, activities, and resources of the community.
+            </p>
+            <p >
+              Technologies: HTML5, CSS, JavaScript, Bootstrap, Firebase, Canva
+            </p>
+          </div>
+        </div>
+        <div data-aos="fade-up-left" class="proj-cards">
+          <div class="img-card"></div>
+          <div class="proj-details">
+            <h5><a href="https://github.com/Alphy777/AEDA" target="_blank" rel="noopener noreferrer">Proxy Re-Encrypted Key for AES Encryption <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
+            <p style="font-size: .8em!important;">
+              Developed a secure chat application integrating AES encryption with ElGamal-based proxy 
+              re-encryption. Enables secure messaging by allowing intermediaries to re-encrypt 
+              data without accessing the original plaintext or keys.
+            </p>
+            <p>
+              Technologies: HTML5, CSS, JavaScript, Pyhton
+            </p>
+          </div>
+        </div>
+      </div>
+      <br><br>
+    </div>
+    <div class="proj-banner">
+      <hr>
+      <h6>More Projects On The Way!</h6>
+      <hr>
+    </div>
+  </section>
+  <!--projects ends here-->
 
   <!--Achivement begins here-->
   <div id="achiv_url"></div> <!--don't remove did for better flow --> <br><br><br>
