--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
               <a class="nav-link nav-text-color" href="#skills_url">Skills</a>
             </li>
             <li class="nav-item">
+              <a href="nav-link nav-text-color" href="#project_url"></a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link nav-text-color" href="#achiv_url">Achievements</a>
             </li>
             <li class="nav-item">
@@ -204,6 +207,7 @@
   <!-- skills ends here -->
 
   <!--projects starts here-->
+  <div id="project_url"></div> <!--don't remove did for better flow --> <br>
   <section id="projects">
     <div class="container-proj">
       <h1 data-aos="fade-up" data-aos-duration="1000">
