--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link nav-text-color" href="#skills_url">Skills</a>
             </li>
             <li class="nav-item">
-              <a href="nav-link nav-text-color" href="#project_url"></a>
+              <a href="nav-link nav-text-color" href="#project_url">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link nav-text-color" href="#achiv_url">Achievements</a>
