--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
           <div class="edu-3" data-aos="fade-up" data-aos-duration="1000">
             <h4>2025</h4>
             <h4><i style="color: blueviolet;" class="fa-solid fa-graduation-cap"></i> College Education</h4>
-            <h6>Christ (Deemed To Be University),Kengeri Campus</h6>
+            <h6>Christ (Deemed To Be University), Bangalore</h6>
             <h6>CGPA: 7.65/10</h6>
           </div>
         </div>
