--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,7 @@
         <div data-aos="fade-up-right" class="proj-cards">
           <div class="img-card"></div>
           <div class="proj-details">
-            <h5><a href="https://alphy777.github.io/Alphy777/" target="_blank" rel="noopener noreferrer">Personal Portfolio <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
+            <h5><a href="https://alphyjose.web.app" target="_blank" rel="noopener noreferrer">Personal Portfolio <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
             <p style="font-size: .89rem!important;">
               A fully responsive portfolio website built to showcase my projects, skills, and experience. 
               Designed with clean UI and accessible navigation to create a strong first impression.
