Algined Project for Mobile Screens

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
       </div>
     </nav>
   </header>
-  <section class="hero">
+  <section id="start_url" class="hero">
     <div class="banner">
       <div data-aos="zoom-out-down" data-aos-duration="3000" class="banner-text">
         <h1>bloom where you are planted</h1>          
@@ -214,11 +214,11 @@
         Projects
       </h1>
       <br><br>
-      <div class="cards-container">
-        <div data-aos="fade-up-right" class="proj-cards">
+      <div class="cards-container row">
+        <div data-aos="fade-up-right" class="proj-cards col-12 col-md-6">
           <div class="img-card"></div>
           <div class="proj-details">
-            <h5><a href="https://alphyjose.web.app" target="_blank" rel="noopener noreferrer">Personal Portfolio <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
+            <h5><a href="#start_url">Personal Portfolio <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
             <p style="font-size: .89rem!important;">
               A fully responsive portfolio website built to showcase my projects, skills, and experience. 
               Designed with clean UI and accessible navigation to create a strong first impression.
@@ -228,7 +228,7 @@
             </p>
           </div>
         </div>
-        <div data-aos="fade-up" class="proj-cards">
+        <div data-aos="fade-up" class="proj-cards col-12 col-md-6">
           <div class="img-card"></div>
           <div class="proj-details">
             <h5><a href="https://indbritzconsultancy.com.au/" target="_blank" rel="noopener noreferrer">Freelance Work <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
@@ -242,7 +242,7 @@
             </p>
           </div>
         </div>
-        <div data-aos="fade-up" class="proj-cards">
+        <div data-aos="fade-up" class="proj-cards col-12 col-md-6">
           <div class="img-card"></div>
           <div class="proj-details">
             <h5><a href="https://christnet-acc.web.app/" target="_blank" rel="noopener noreferrer">Christnet <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
@@ -255,7 +255,7 @@
             </p>
           </div>
         </div>
-        <div data-aos="fade-up-left" class="proj-cards">
+        <div data-aos="fade-up-left" class="proj-cards col-12 col-md-6">
           <div class="img-card"></div>
           <div class="proj-details">
             <h5><a href="https://github.com/Alphy777/AEDA" target="_blank" rel="noopener noreferrer">Proxy Re-Encrypted Key for AES Encryption <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a></h5>
