--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
       </div>
       <div data-aos="fade-up" data-aos-duration="3000" class="download-btn"><br>
       
-        <a href="docs/AlphyJose_Resume.pdf" download="AlphyJose_Resume.pdf" onclick="alert('Resume Downloaded.')">
+        <a href="docs/Alphy_Jose_Resume.pdf" download="AlphyJose_Resume.pdf" onclick="alert('Resume Downloaded.')">
           Resume <i class="fa-solid fa-download"></i>
         </a>
         
